Fix start script path to serve.js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node serve.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
